Update 's2koof1lz-python' component image to: quay.io/rhtap_qe/rhtap-qe-python:fad645e6165c868b16e63764ad5b39f74ba4038e@sha256:d20a8257938a28f1b9f9e87b29cfcef0dd432094495622d37fbaf84122f1304c

--- a/components/s2koof1lz-python/overlays/development/deployment-patch.yaml
+++ b/components/s2koof1lz-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: s2koof1lz-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-python:fad645e6165c868b16e63764ad5b39f74ba4038e@sha256:d20a8257938a28f1b9f9e87b29cfcef0dd432094495622d37fbaf84122f1304c
+          name: container-image
